# KeePassDX

./: .classpath  .gitignore  .project  AndroidManifest.xml  CHANGELOG  CONTRIBUTING.md  CONTRIBUTORS  Contact us  FAQ  FAQ.md  LICENSE  README  README.md  ReadMe.md  build.gradle  build.xml  default.properties  gplv3.md  gradle.properties  lint.xml  project.properties  settings.gradle
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  bug_report.yml  feature_request.yaml  feature_request.yml
.github/workflows/: release.yml
LICENSES/: LICENSE-AREV-FONT  LICENSE-BITSREAM-VERA-FONT  LICENSE_ANDROID_BACKUP_SERVICE  LICENSE_BOUNCY_CASTLE  LICENSE_ICON_PACK_CLASSIC
app/: .gitignore  build.gradle  proguard-rules.pro
app-icon-loader/: .gitignore  build.gradle  lint.xml
art/: background_repeat.xcf  store_screens.7z
assets/: accent.kdb  binary-key.kdb  binary.key  delete.kdb  kdb_with_xml_keyfile.kdb  key-only.kdbx  keyfile.kdbx  keyfile.key  no-encrypt.kdbx  test.kdbx  test1.kdb  twofish.kdb
classiciconpack/: build.gradle
crypto/: build.gradle
crypto/src/main/jni/aes/: CMakeLists.txt  aes_jni.c
crypto/src/main/jni/argon2/: CMakeLists.txt  argon2_jni.c
crypto/src/main/jni/argon2/src/: CMakeLists.txt
database/: build.gradle  proguard-rules.pro
docs/: keeshare-end-user-guide.md  keeshare-support.md
docs/plans/: 2026-02-21-keeshare-implementation-design.md
encrypt/: build.gradle
fastlane/: .gitignore  Appfile  Fastfile  Pluginfile  README.md  releaseDescGenerator.sh
fastlane/pro/: Appfile
gradle/wrapper/: gradle-wrapper.properties
icon-pack/: build.gradle
icon-pack-classic/: License.txt  build.gradle
icon-pack-material/: build.gradle
icon-pack/classic/: build.gradle
icon-pack/material/: License.txt  build.gradle
jni/: .gitignore  Application.mk  prep_build.sh
jni/aes/: .gitignore  aes.txt  aes_via_ace.h  aes_x86_v1.asm  aes_x86_v2.asm  aescpp.h  aescrypt.c  aeskey.c  aesopt.h  aestab.c  aesxam.c  brg_endian.h  brg_types.h  rfc3686.c  tablegen.c
jni/final_key/: .kpd_jni.c.swp  Android.mk  aes.c  final_key.c  kpd_jni.c
jni/libgcrypt/: AUTHORS  Android.mk  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.SVN  THANKS  TODO  acinclude.m4  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
jni/libgcrypt/cipher/: Android.mk.bak  ChangeLog  Makefile  Makefile.am  Makefile.in  ac.c  arcfour.c  blowfish.c  camellia-glue.c  camellia.c  camellia.h  cast5.c  cipher.c  crc.c  des.c  dsa.c  ecc.c  elgamal.c  hash-common.c  hash-common.h  hmac-tests.c  md.c  md4.c  md5.c  primegen.c  pubkey.c  rfc2268.c  rijndael-tables.h  rijndael.c  rmd.h  rmd160.c  rsa.c  seed.c  serpent.c  sha1.c  sha256.c  sha512.c  tiger.c  twofish.c  whirlpool.c
jni/libgcrypt/doc/: ChangeLog  HACKING  Makefile  Makefile.am  Makefile.in  fips-fsm.eps  gcrypt.info  gcrypt.texi  gpl.texi  libgcrypt-modules.eps  version.texi
jni/libgcrypt/m4/: ChangeLog  Makefile  Makefile.am  Makefile.in  libtool.m4
jni/libgcrypt/mpi/: .longlong.h.swp  Android.mk.bak  ChangeLog  Makefile  Makefile.am  Makefile.in  asm-syntax.h  config.links  ec.c  longlong.h  mod-source-info.h  mpi-add.c  mpi-asm-defs.h  mpi-bit.c  mpi-cmp.c  mpi-div.c  mpi-gcd.c  mpi-inline.c  mpi-inline.h  mpi-internal.h  mpi-mod.c  mpi-mpow.c  mpi-mul.c  mpi-pow.c  mpi-scan.c  mpicoder.c  mpih-add1-asm.S  mpih-add1.c  mpih-div.c  mpih-lshift-asm.S  mpih-lshift.c  mpih-mul.c  mpih-mul1-asm.S  mpih-mul1.c  mpih-mul2-asm.S  mpih-mul2.c  mpih-mul3-asm.S  mpih-mul3.c  mpih-rshift-asm.S  mpih-rshift.c  (+3 more)
jni/libgcrypt/random/: Android.mk  ChangeLog  Makefile  Makefile.am  Makefile.in  rand-internal.h  random-csprng.c  random-daemon.c  random-fips.c  random.c  random.h  rndegd.c  rndhw.c  rndlinux.c  rndunix.c  rndw32.c
jni/libgcrypt/src/: Android.mk.bak  ChangeLog  Makefile  Makefile.am  Makefile.in  ath.c  ath.h  cipher-proto.h  cipher.h  dumpsexp.c  fips.c  g10lib.h  gcrypt.h  gcrypt.h.in  gcryptrnd.c  getrandom.c  global.c  hmac256.c  hwfeatures.c  libgcrypt-config  libgcrypt-config.in  libgcrypt.def  libgcrypt.vers  misc.c  missing-string.c  module.c  mpi.h  secmem.c  sexp.c  stdmem.c  versioninfo.rc  versioninfo.rc.in  visibility.c  visibility.h
jni/libgcrypt/src/.deps/: libgcrypt_la-misc.Plo  libgcrypt_la-visibility.Plo  visibility.Po
jni/libgcrypt/tests/: ChangeLog  Makefile  Makefile.am  Makefile.in  ac-data.c  ac-schemes.c  ac.c  basic.c  benchmark.c  cavs_driver.pl  cavs_tests.sh  fips186-dsa.c  fipsdrv.c  hmac.c  keygen.c  keygrip.c  mpitests.c  pkbench.c  prime.c  pubkey.c  random.c  register.c  t-mpi-bit.c  tsexp.c  version.c
jni/libgpg-error/: AUTHORS  Android.mk  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  autogen.sh  config.guess  config.h  config.h.in  config.status  config.sub  configure  configure.ac  libgpg-error.spec  libtool
jni/libgpg-error/lang/: Makefile  Makefile.in
jni/libgpg-error/lang/cl/: Makefile  Makefile.in  gpg-error.asd  gpg-error.lisp
jni/libgpg-error/m4/: ChangeLog  Makefile  Makefile.in  libtool.m4
jni/libgpg-error/po/: ChangeLog  LINGUAS  Makefile  Makefile.in  POTFILES  de.gmo  de.po  fr.gmo  fr.po  libgpg-error.pot  pl.gmo  pl.po  ro.gmo  ro.po  sv.gmo  sv.po  vi.gmo  vi.po
jni/libgpg-error/src/: Makefile  Makefile.am  Makefile.in  code-from-errno.c  code-to-errno.h  err-codes.h  err-codes.h.in  err-sources.h  err-sources.h.in  errnos.in  gettext.h  gpg-error-config  gpg-error-config.in  gpg-error.c  gpg-error.def  gpg-error.h  gpg-error.h.in  init.c  mkerrcodes  mkerrcodes1.awk  mkerrnos.awk  mkheader.awk  mkstrtable.awk  versioninfo.rc  w32-gettext.c  w32-gettext.h
jni/libgpg-error/tests/: Makefile  Makefile.am  Makefile.in  t-syserror.c
jni_root/: .gitignore  Application.mk  README  build.patch  prep_build.sh
keepass-model/: build.gradle
libs/: .gitignore
local/: hdpi.psd  high-res-icon.xcf  ldpi.psd  mdpi.psd
magikeyboard/: build.gradle
tests/: .classpath  .project  AndroidManifest.xml  build.xml  project.properties
(+3945 files in other folders)
